# PanelCleaner

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  PanelCleaner.desktop  PanelCleaner.spec  README.fa.md  README.md  build-integration-helper-pyinstaller.bat  build-pyinstaller-cuda.bat  build-pyinstaller.bat  build.sh  build_requirements.txt  crowdin.yml  pyproject.toml  release-pypi.sh  requirements.txt  requirements_tested.txt  requirements_windows.txt  setup-cli-gui.cfg  setup-cli.cfg  setup.cfg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-windows-paddle.yml  build-windows-release.yml
Windows scripts/: Run scripts from project root.txt  build-integration-helper-pyinstaller.bat  build-pyinstaller-cuda.bat  build-pyinstaller-paddleocr.bat  build-pyinstaller.bat  export-requirements-tested-gui-cpu.bat  install_cpu_windows.bat  install_cuda_windows.bat  known good requirement versions.txt  refresh-assets-windows.bat  webtoon-build-exe.bat  webtoon-gui.bat  webtoon-install.bat  webtoon-set-apikey.bat  webtoon.bat
_testbed/: README.md  experiments.ipynb  experiments.py  helpers.ipynb  helpers.py  ocr_idefics.py  ocr_metric.ipynb  ocr_metric.py  requirements.txt  test_idefics.ipynb  test_tesseract.ipynb
de/: translations
docs/: What is _internal.txt  faq.md
docs/redesign/: 00-overview.md  01-architecture.md  02-workspace.md  03-glossary.md  04-openrouter-translation.md  05-text-rendering.md  06-cli.md  07-roadmap.md  08-phase1-implementation.md  09-phase2-implementation.md  10-phase3-implementation.md  11-phase4-implementation.md  12-phase5-implementation.md  USAGE.md
en-US/: translations
es-ES/: translations
flatpak/: io.github.voxelcubes.panelcleaner.appdata.xml
fr/: translations
icons/: build_icon_cache  build_icon_cache.py  copy_from_dark_to_light.py  icons.qrc  logo.xcf  theme_icons.qrc  theme_list.yaml
icons/BreezeDark/: index.theme
icons/custom_icons/: copy_from_dark_to_light.py
media/: Untitled.xcf  default.conf  logo.xcf  logo_small.xcf  pcdemo.asciinema
pcleaner/: __init__.py  analytics.py  cleaner.py  cli_utils.py  config.py  ctd_interface.py  denoiser.py  glossary.py  glossary_cli.py  helpers.py  image_export.py  image_ops.py  inpainting.py  llm_correction.py  main.py  masker.py  memory_watcher.py  model_downloader.py  ocr_tesseract.py  output_structures.py  pre_processor.py  preprocessor.py  profile_cli.py  render_cli.py  structures.py  toml_utils.py  translate_cli.py  workspace.py  workspace_cli.py  workspace_runner.py
pcleaner/_testbed/: README.md  requirements-colab.txt  requirements-idefics.txt  requirements.txt  test_idefics.ipynb  test_paligemma.ipynb  test_tesseract.ipynb
pcleaner/comic_text_detector/: README.md  basemodel.py  bubble_detector.py  inference.py
pcleaner/data/: supported_languages.py  windows_explorer_integration_regedit.py
pcleaner/gui/: about_driver.py  ctd_interface_gui.py  error_dialog_driver.py  file_manager_extension_driver.py  file_table.py  glossary_editor.py  gui_utils.py  image_details_driver.py  image_diff_viewers.py  image_file.py  image_match_driver.py  image_tab.py  image_viewer.py  issue_reporter_driver.py  launcher.py  (+21 more)
post-action examples/: ExportBoxMask.py
tests/: helpers.py  test_glossary.py  test_gui_glossary_editor.py  test_image_splitting.py  test_log_parser.py  test_ocr_output_parser.py  test_output_structures_translate.py  test_rendering_config.py  test_rendering_fonts.py  test_rendering_layout.py  test_rendering_render.py  test_theming.py  test_translator_batching.py  test_translator_cache.py  test_translator_models.py  test_translator_openrouter.py  test_translator_prompt.py  test_translator_translate.py  test_workspace.py  test_workspace_runner.py
themes/: themes.qrc
tools/: sync_setup_cfg.py
tr/: translations
translations/: PanelCleaner_bg_BG.ts  PanelCleaner_cs_CZ.ts  PanelCleaner_de_DE.ts  PanelCleaner_en_US.ts  PanelCleaner_es_ES.ts  PanelCleaner_fa_IR.ts  PanelCleaner_fr_FR.ts  PanelCleaner_it_IT.ts  PanelCleaner_ja_JP.ts  PanelCleaner_ko_KR.ts  PanelCleaner_pt_BR.ts  PanelCleaner_pt_PT.ts  PanelCleaner_source.ts  PanelCleaner_th_TH.ts  PanelCleaner_tr_TR.ts  PanelCleaner_uk_UA.ts  PanelCleaner_vi_VN.ts  PanelCleaner_zh_CN.ts  TRANSLATING.md  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  process_steps_extractor.py  profile_extractor.py  tr_TR.ts
ui_files/: About.ui  ErrorDialog.ui  FileManagerIntegration.ui  ImageDetails.ui  ImageMatchOverview.ui  IssueReporter.ui  License.ui  Mainwindow.ui  ModelDownloader.ui  NewProfile.ui  OCRLanguageSupport.ui  OcrReview.ui  OutputReview.ui  PostActionConfiguration.ui  PostActionRunner.ui  SetupGreeter.ui
(+91 files in other folders)
