[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[dependency-groups]
runtime-base = [
	"opencv-python",
	"transformers",
	"manga_ocr",
	"Pillow",
	"tqdm",
	"numpy",
	"scipy",
	"pyclipper",
	"shapely",
	"natsort",
	"docopt-ng",
	"ConfigUpdater",
	"torch",
	"torchvision",
	"loguru",
	"prettytable",
	"colorama",
	"requests",
	"xdg",
	"tifffile",
	"attrs",
	"psutil",
	"dictdiffer",
	"humanfriendly",
	"simple_lama_inpainting",
	"pytesseract",
	"psd-tools >= 1.11.0",
	"strenum; python_version < \"3.11\"",
	"pywin32; platform_system == \"Windows\"",
	"win10toast; platform_system == \"Windows\"",
	"pyuac; platform_system == \"Windows\"",
]
runtime-gui = [
	"PySide6",
]
runtime-dbus = [
	"dbus-python; platform_system == \"Linux\"",
]
dev-tools = [
	"build",
	"pytest",
	"PyYAML",
	"tomli",
	"pyinstaller",
]

[tool.black]
line-length = 100
