# We don't specify a [project] section here because all of the metadata is in the setup.cfg files,
# which differ for gui and cli versions.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[dependency-groups]
runtime-base = [
	"opencv-python",
	"huggingface_hub",
	"manga_ocr",
	"Pillow",
	"tqdm",
	"numpy",
	"scipy",
	"pyclipper",
	"shapely",
	"natsort",
	"docopt-ng",
	"ConfigUpdater",
	"loguru",
	"prettytable",
	"colorama",
	"requests",
	"xdg",
	"tifffile",
	"attrs",
	"psutil",
	"dictdiffer",
	"humanfriendly",
	"simple_lama_inpainting",
	"pytesseract",
	"psd-tools >= 1.11.0",
	"strenum; python_version < \"3.11\"",
	"pywin32; platform_system == \"Windows\"",
	"win10toast; platform_system == \"Windows\"",
	"pyuac; platform_system == \"Windows\"",
]
runtime-torch = [
	"torch",
	"torchvision",
]
runtime-gui = [
	"PySide6",
]
runtime-dbus = [
	"dbus-python; platform_system == \"Linux\"",
]
dev-tools = [
	"build",
	"pytest",
	"PyYAML",
	"tomli",
	"pyinstaller",
]

[tool.black]
line-length = 100
