[metadata]
name = pcleaner
version = attr: pcleaner.__version__
description = An AI-powered tool to clean manga panels.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/VoxelCubes/PanelCleaner
keywords = image processing, cleaning, text removal, manga, ai, machine learning
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Natural Language :: English

[options]
install_requires =
    opencv-python
    manga_ocr
    Pillow
    torch
    torchvision
    tqdm
    numpy
    scipy
    pyclipper
    shapely
    natsort
    python-magic
    docopt-ng
    ConfigUpdater
    logzero
    prettytable
    colorama
    requests
    xdg
    tifffile
    PySide6
python_requires = >=3.10
packages=find:

[options.package_data]
pcleaner = data/*

[options.packages.find]
exclude=tests*

[options.entry_points]
console_scripts =
    pcleaner = pcleaner.main:main
